@@ -1,5 +1,10 @@
 2023-09-03  Bruno Haible  <bruno@clisp.org>
 
+	Improve clang support.
+	* lib/unistring/inline.h: Treat clang like GCC.
+
+2023-09-03  Bruno Haible  <bruno@clisp.org>
+
 	Sync with gnulib.
 	* lib/unistring/cdefs.h: Update from gnulib/m4/gnulib-common.m4.
 	(_UC_HAS_ATTRIBUTE): Apply
